cabal-version: 2.0

name: mitchell-stdlib
version: 0.1.0
build-type: Simple
category: Prelude
license: BSD3
license-file: LICENSE

--------------------------------------------------------------------------------
-- Flags
--------------------------------------------------------------------------------

----------------
-- Flags
-- default: True
----------------

flag dep-bytestring
  description: bytestring dependency
  default: True
  manual: True

flag dep-containers
  description: containers dependency
  default: True
  manual: True

flag dep-text
  description: text dependency
  default: True
  manual: True

-----------------
-- Flags
-- default: False
-----------------

flag dep-aeson
  description: aeson dependency
  default: False
  manual: True

flag dep-ansi-terminal
  description: ansi-terminal dependency
  default: False
  manual: True

flag dep-async
  description: async dependency
  default: False
  manual: True

flag dep-atomic-primops
  description: atomic-primops dependency
  default: False
  manual: True

flag dep-base16-bytestring
  description: base16-bytestring dependency
  default: False
  manual: True

flag dep-bits
  description: bits dependency
  default: False
  manual: True

flag dep-bytestring-trie
  description: bytestring-trie dependency
  default: False
  manual: True

flag dep-comonad
  description: comonad dependency
  default: False
  manual: True

flag dep-compact
  description: compact dependency
  default: False
  manual: True

flag dep-constraints
  description: constraints dependency
  default: False
  manual: True

flag dep-contravariant
  description: contravariant dependency
  default: False
  manual: True

flag dep-contravariant-extras
  description: contravariant-extras dependency
  default: False
  manual: True

flag dep-deepseq
  description: deepseq dependency
  default: False
  manual: True

flag dep-directory
  description: directory dependency
  default: False
  manual: True

flag dep-distributive
  description: distributive dependency
  default: False
  manual: True

flag dep-dlist
  description: dlist dependency
  default: False
  manual: True

flag dep-erf
  description: erf dependency
  default: False
  manual: True

flag dep-extra
  description: extra dependency
  default: False
  manual: True

flag dep-filepath
  description: filepath dependency
  default: False
  manual: True

flag dep-foldl
  description: foldl dependency
  default: False
  manual: True

flag dep-gauge
  description: gauge dependency
  default: False
  manual: True

flag dep-hashable
  description: hashable dependency
  default: False
  manual: True

flag dep-hedgehog
  description: hedgehog dependency
  default: False
  manual: True

flag dep-heaps
  description: heaps dependency
  default: False
  manual: True

flag dep-lens
  description: lens dependency
  default: False
  manual: True

flag dep-list-transformer
  description: list-transformer dependency
  default: False
  manual: True

flag dep-logict
  description: logict dependency
  default: False
  manual: True

flag dep-managed
  description: managed dependency
  default: False
  manual: True

flag dep-megaparsec
  description: megaparsec dependency
  default: False
  manual: True

flag dep-mmorph
  description: mmorph dependency
  default: False
  manual: True

flag dep-monad-ste
  description: monad-ste dependency
  default: False
  manual: True

flag dep-mtl
  description: mtl dependency
  default: False
  manual: True

flag dep-multiset
  description: multiset dependency
  default: False
  manual: True

flag dep-mwc-random
  description: mwc-random dependency
  default: False
  manual: True

flag dep-network
  description: network dependency
  default: False
  manual: True

flag dep-nf
  description: nf dependency
  default: False
  manual: True

flag dep-optparse-applicative
  description: optparse-applicative dependency
  default: False
  manual: True

flag dep-parallel
  description: parallel dependency
  default: False
  manual: True

flag dep-prettyprinter
  description: prettyprinter dependency
  default: False
  manual: True

flag dep-primitive
  description: primitive dependency
  default: False
  manual: True

flag dep-profunctors
  description: profunctors dependency
  default: False
  manual: True

flag dep-psqueues
  description: psqueues dependency
  default: False
  manual: True

flag dep-reactive-banana
  description: reactive-banana dependency
  default: False
  manual: False

flag dep-reflection
  description: reflection dependency
  default: False
  manual: True

flag dep-regex-applicative
  description: regex-applicative dependency
  default: False
  manual: True

flag dep-safe-exceptions
  description: safe-exceptions dependency
  default: False
  manual: True

flag dep-scientific
  description: scientific dependency
  default: False
  manual: True

flag dep-semigroups
  description: semigroups dependency
  default: False
  manual: True

flag dep-stm
  description: stm dependency
  default: False
  manual: True

flag dep-stm-containers
  description: stm-containers dependency
  default: False
  manual: True

flag dep-tagged
  description: tagged dependency
  default: False
  manual: True

flag dep-text-short
  description: text-short dependency
  default: False
  manual: True

flag dep-time
  description: time dependency
  default: False
  manual: True

flag dep-transformers
  description: transformers dependency
  default: False
  manual: True

flag dep-transformers-base
  description: transformers-base dependency
  default: False
  manual: True

flag dep-typed-process
  description: typed-process dependency
  default: False
  manual: True

flag dep-unagi-chan
  description: unagi-chan dependency
  default: False
  manual: True

flag dep-unix
  description: unix dependency
  default: False
  manual: True

flag dep-unliftio
  description: unliftio dependency
  default: False
  manual: True

flag dep-unordered-containers
  description: unordered-containers dependency
  default: False
  manual: True

flag dep-vector
  description: vector dependency
  default: False
  manual: True

flag dep-weigh
  description: weigh dependency
  default: False
  manual: True

flag dep-writer-cps-mtl
  description: writer-cps-mtl dependency
  default: False
  manual: True

--------------------------------------------------------------------------------
-- Library
--------------------------------------------------------------------------------

library
  hs-source-dirs: .
  ghc-options: -Wall
  default-extensions: NoImplicitPrelude
  default-language: Haskell2010

  -- Reexport base for convenience. Some of these are actually required for
  -- various purposes:
  --
  --   Control.Monad      -- :main
  --   Control.Exception  -- Paths_
  --   Data.Version       -- Paths_
  --   GHC.Base           -- ghci
  --   Prelude            -- Paths_
  --   System.Environment -- ghci
  --   System.IO          -- ghci
  reexported-modules:
      base:Control.Applicative
    , base:Control.Arrow
    , base:Control.Category
    , base:Control.Concurrent
    , base:Control.Concurrent.Chan
    , base:Control.Concurrent.MVar
    , base:Control.Concurrent.QSem
    , base:Control.Concurrent.QSemN
    , base:Control.Exception
    , base:Control.Exception.Base
    , base:Control.Monad
    , base:Control.Monad.Fail
    , base:Control.Monad.Fix
    , base:Control.Monad.Instances
    , base:Control.Monad.IO.Class
    , base:Control.Monad.ST
    , base:Control.Monad.ST.Lazy
    , base:Control.Monad.ST.Lazy.Safe
    , base:Control.Monad.ST.Lazy.Unsafe
    , base:Control.Monad.ST.Safe
    , base:Control.Monad.ST.Strict
    , base:Control.Monad.ST.Unsafe
    , base:Control.Monad.Zip
    , base:Data.Bifoldable
    , base:Data.Bifunctor
    , base:Data.Bitraversable
    , base:Data.Bits
    , base:Data.Bool
    , base:Data.Char
    , base:Data.Coerce
    , base:Data.Complex
    , base:Data.Data
    , base:Data.Dynamic
    , base:Data.Either
    , base:Data.Eq
    , base:Data.Fixed
    , base:Data.Foldable
    , base:Data.Function
    , base:Data.Functor
    , base:Data.Functor.Classes
    , base:Data.Functor.Compose
    , base:Data.Functor.Const
    , base:Data.Functor.Identity
    , base:Data.Functor.Product
    , base:Data.Functor.Sum
    , base:Data.IORef
    , base:Data.Int
    , base:Data.Ix
    , base:Data.Kind
    , base:Data.List
    , base:Data.List.NonEmpty
    , base:Data.Maybe
    , base:Data.Monoid
    , base:Data.Ord
    , base:Data.Proxy
    , base:Data.Ratio
    , base:Data.Semigroup
    , base:Data.STRef
    , base:Data.STRef.Lazy
    , base:Data.STRef.Strict
    , base:Data.String
    , base:Data.Traversable
    , base:Data.Tuple
    , base:Data.Type.Bool
    , base:Data.Type.Coercion
    , base:Data.Type.Equality
    , base:Data.Typeable
    , base:Data.Unique
    , base:Data.Version
    , base:Data.Void
    , base:Data.Word
    , base:Debug.Trace
    , base:Foreign
    , base:Foreign.C
    , base:Foreign.C.Error
    , base:Foreign.C.String
    , base:Foreign.C.Types
    , base:Foreign.Concurrent
    , base:Foreign.ForeignPtr
    , base:Foreign.ForeignPtr.Safe
    , base:Foreign.ForeignPtr.Unsafe
    , base:Foreign.Marshal
    , base:Foreign.Marshal.Alloc
    , base:Foreign.Marshal.Array
    , base:Foreign.Marshal.Error
    , base:Foreign.Marshal.Pool
    , base:Foreign.Marshal.Safe
    , base:Foreign.Marshal.Unsafe
    , base:Foreign.Marshal.Utils
    , base:Foreign.Ptr
    , base:Foreign.Safe
    , base:Foreign.StablePtr
    , base:Foreign.Storable
    , base:GHC.Arr
    , base:GHC.Base
    , base:GHC.Char
    , base:GHC.Conc
    , base:GHC.Conc.IO
    , base:GHC.Conc.Signal
    , base:GHC.Conc.Sync
    , base:GHC.ConsoleHandler
    , base:GHC.Constants
    , base:GHC.Desugar
    , base:GHC.Enum
    , base:GHC.Environment
    , base:GHC.Err
    , base:GHC.Exception
    , base:GHC.ExecutionStack
    , base:GHC.ExecutionStack.Internal
    , base:GHC.Exts
    , base:GHC.Fingerprint
    , base:GHC.Fingerprint.Type
    , base:GHC.Float
    , base:GHC.Float.ConversionUtils
    , base:GHC.Float.RealFracMethods
    , base:GHC.Foreign
    , base:GHC.ForeignPtr
    , base:GHC.GHCi
    , base:GHC.Generics
    , base:GHC.IO
    , base:GHC.IO.Buffer
    , base:GHC.IO.BufferedIO
    , base:GHC.IO.Device
    , base:GHC.IO.Encoding
    , base:GHC.IO.Encoding.CodePage
    , base:GHC.IO.Encoding.Failure
    , base:GHC.IO.Encoding.Iconv
    , base:GHC.IO.Encoding.Latin1
    , base:GHC.IO.Encoding.Types
    , base:GHC.IO.Encoding.UTF16
    , base:GHC.IO.Encoding.UTF32
    , base:GHC.IO.Encoding.UTF8
    , base:GHC.IO.Exception
    , base:GHC.IO.FD
    , base:GHC.IO.Handle
    , base:GHC.IO.Handle.FD
    , base:GHC.IO.Handle.Internals
    , base:GHC.IO.Handle.Lock
    , base:GHC.IO.Handle.Text
    , base:GHC.IO.Handle.Types
    , base:GHC.IO.IOMode
    , base:GHC.IO.Unsafe
    , base:GHC.IOArray
    , base:GHC.IORef
    , base:GHC.Int
    , base:GHC.List
    , base:GHC.MVar
    , base:GHC.Natural
    , base:GHC.Num
    , base:GHC.OldList
    , base:GHC.OverloadedLabels
    , base:GHC.PArr
    , base:GHC.Pack
    , base:GHC.Profiling
    , base:GHC.Ptr
    , base:GHC.Read
    , base:GHC.Real
    , base:GHC.Records
    , base:GHC.RTS.Flags
    , base:GHC.ST
    , base:GHC.StaticPtr
    , base:GHC.STRef
    , base:GHC.Show
    , base:GHC.Stable
    , base:GHC.Stack
    , base:GHC.Stack.CCS
    , base:GHC.Stack.Types
    , base:GHC.Stats
    , base:GHC.Storable
    , base:GHC.TopHandler
    , base:GHC.TypeLits
    , base:GHC.TypeNats
    , base:GHC.Unicode
    , base:GHC.Weak
    , base:GHC.Word
    , base:Numeric
    , base:Numeric.Natural as Base.Numeric.Natural
    , base:Prelude
    , base:System.CPUTime
    , base:System.Console.GetOpt
    , base:System.Environment
    , base:System.Exit
    , base:System.IO
    , base:System.IO.Error
    , base:System.IO.Unsafe
    , base:System.Info
    , base:System.Mem
    , base:System.Mem.StableName
    , base:System.Mem.Weak
    , base:System.Posix.Internals
    , base:System.Posix.Types
    , base:System.Timeout
    , base:Text.ParserCombinators.ReadP
    , base:Text.ParserCombinators.ReadPrec
    , base:Text.Printf
    , base:Text.Read
    , base:Text.Read.Lex
    , base:Text.Show
    , base:Text.Show.Functions
    , base:Type.Reflection
    , base:Type.Reflection.Unsafe
    , base:Unsafe.Coerce
  if impl(ghc >= 8.4)
    reexported-modules:
        base:GHC.ByteOrder
      , base:GHC.Clock
      , base:System.Environment.Blank

  ------------------------------------------------------------------------------
  -- Dependencies
  ------------------------------------------------------------------------------

  build-depends: base >= 4.10 && < 4.12

  if flag(dep-aeson)
    build-depends: aeson ^>= 1.3
    cpp-options: -DDEP_AESON

  if flag(dep-ansi-terminal)
    build-depends: ansi-terminal ^>= 0.8
    cpp-options: -DDEP_ANSI_TERMINAL

  if flag(dep-async)
    build-depends: async ^>= 2.2
    cpp-options: -DDEP_ASYNC

  if flag(dep-atomic-primops)
    build-depends: atomic-primops ^>= 0.8
    cpp-options: -DDEP_ATOMIC_PRIMOPS

  if flag(dep-base16-bytestring)
    build-depends: base16-bytestring ^>= 0.1
    cpp-options: -DDEP_BASE16_BYTESTRING

  if flag(dep-bits)
    build-depends: bits ^>= 0.5
    cpp-options: -DDEP_BITS

  if flag(dep-bytestring)
    build-depends: bytestring ^>= 0.10
    cpp-options: -DDEP_BYTESTRING

  if flag(dep-bytestring-trie)
    build-depends: bytestring-trie ^>= 0.2
    cpp-options: -DDEP_BYTESTRING_TRIE

  if flag(dep-comonad)
    build-depends: comonad ^>= 5.0
    cpp-options: -DDEP_COMONAD

  if flag(dep-compact)
    build-depends: compact ^>= 0.1
    cpp-options: -DDEP_COMPACT

  if flag(dep-constraints)
    build-depends: constraints ^>= 0.10
    cpp-options: -DDEP_CONSTRAINTS

  if flag(dep-containers)
    build-depends: containers ^>= 0.5
    cpp-options: -DDEP_CONTAINERS

  if flag(dep-contravariant)
    build-depends: contravariant ^>= 1.4
    cpp-options: -DDEP_CONTRAVARIANT

  if flag(dep-contravariant-extras)
    build-depends: contravariant-extras ^>= 0.3
    cpp-options: -DDEP_CONTRAVARIANT_EXTRAS

  if flag(dep-deepseq)
    build-depends: deepseq ^>= 1.4.3
    cpp-options: -DDEP_DEEPSEQ

  if flag(dep-directory)
    build-depends: directory ^>= 1.3
    cpp-options: -DDEP_DIRECTORY

  if flag(dep-distributive)
    build-depends: distributive ^>= 0.5
    cpp-options: -DDEP_DISTRIBUTIVE

  if flag(dep-dlist)
    build-depends: dlist ^>= 0.8
    cpp-options: -DDEP_DLIST

  if flag(dep-erf)
    build-depends: erf ^>= 2.0
    cpp-options: -DDEP_ERF

  if flag(dep-extra)
    build-depends: extra ^>= 1.6
    cpp-options: -DDEP_EXTRA

  if flag(dep-filepath)
    build-depends: filepath ^>= 1.4
    cpp-options: -DDEP_FILEPATH

  if flag(dep-foldl)
    build-depends: foldl ^>= 1.4
    cpp-options: -DDEP_FOLDL

  if flag(dep-gauge)
    build-depends: gauge ^>= 0.2
    cpp-options: -DDEP_GAUGE

  if flag(dep-hashable)
    build-depends: hashable ^>= 1.2
    cpp-options: -DDEP_HASHABLE

  if flag(dep-heaps)
    build-depends: heaps ^>= 0.3
    cpp-options: -DDEP_HEAPS

  if flag(dep-hedgehog)
    build-depends: hedgehog ^>= 0.5
    cpp-options: -DDEP_HEDGEHOG

  if flag(dep-lens)
    build-depends: lens ^>= 4.16
    cpp-options: -DDEP_LENS

  if flag(dep-list-transformer)
    build-depends: list-transformer ^>= 1.0.4
    cpp-options: -DDEP_LIST_TRANSFORMER

  if flag(dep-logict)
    build-depends: logict ^>= 0.6
    cpp-options: -DDEP_LOGICT

  if flag(dep-managed)
    build-depends: managed ^>= 1.0
    cpp-options: -DDEP_MANAGED

  if flag(dep-megaparsec)
    build-depends: megaparsec ^>= 6.5
    cpp-options: -DDEP_MEGAPARSEC

  if flag(dep-mmorph)
    build-depends: mmorph ^>= 1.1
    cpp-options: -DDEP_MMORPH

  if flag(dep-monad-ste)
    build-depends: monad-ste ^>= 0.1
    cpp-options: -DDEP_MONAD_STE

  if flag(dep-mtl)
    build-depends: mtl ^>= 2.2
    cpp-options: -DDEP_MTL

  if flag(dep-multiset)
    build-depends: multiset ^>= 0.3
    cpp-options: -DDEP_MULTISET

  if flag(dep-mwc-random)
    build-depends: mwc-random ^>= 0.13
    cpp-options: -DDEP_MWC_RANDOM

  if flag(dep-network)
    build-depends: network ^>= 2.7
    cpp-options: -DDEP_NETWORK

  if flag(dep-nf)
    build-depends: nf ^>= 1.0
    cpp-options: -DDEP_NF

  if flag(dep-optparse-applicative)
    build-depends: optparse-applicative ^>= 0.14
    cpp-options: -DDEP_OPTPARSE_APPLICATIVE

  if flag(dep-parallel)
    build-depends: parallel ^>= 3.2
    cpp-options: -DDEP_PARALLEL

  if flag(dep-prettyprinter)
    build-depends: prettyprinter ^>= 1.2
    cpp-options: -DDEP_PRETTYPRINTER

  if flag(dep-primitive)
    build-depends: primitive ^>= 0.6
    cpp-options: -DDEP_PRIMITIVE

  if flag(dep-profunctors)
    build-depends: profunctors ^>= 5.2
    cpp-options: -DDEP_PROFUNCTORS

  if flag(dep-psqueues)
    build-depends: psqueues ^>= 0.2
    cpp-options: -DDEP_PSQUEUES

  if flag(dep-reactive-banana)
    build-depends: reactive-banana ^>= 1.2
    cpp-options: -DDEP_REACTIVE_BANANA

  if flag(dep-reflection)
    build-depends: reflection ^>= 2.1
    cpp-options: -DDEP_REFLECTION

  if flag(dep-regex-applicative)
    build-depends: regex-applicative ^>= 0.3
    cpp-options: -DDEP_REGEX_APPLICATIVE

  if flag(dep-safe-exceptions)
    build-depends: safe-exceptions ^>= 0.1
    cpp-options: -DDEP_SAFE_EXCEPTIONS

  if flag(dep-scientific)
    build-depends: scientific ^>= 0.3
    cpp-options: -DDEP_SCIENTIFIC

  if flag(dep-semigroups)
    build-depends: semigroups ^>= 0.18
    cpp-options: -DDEP_SEMIGROUPS

  if flag(dep-stm)
    build-depends: stm ^>= 2.4.5
    cpp-options: -DDEP_STM

  if flag(dep-stm-containers)
    build-depends: stm-containers ^>= 0.2
    cpp-options: -DDEP_STM_CONTAINERS

  if flag(dep-tagged)
    build-depends: tagged ^>= 0.8
    cpp-options: -DDEP_TAGGED

  if flag(dep-text)
    build-depends: text ^>= 1.2
    cpp-options: -DDEP_TEXT

  if flag(dep-text-short)
    build-depends: text-short ^>= 0.1
    cpp-options: -DDEP_TEXT_SHORT

  if flag(dep-time)
    build-depends: time ^>= 1.8 || ^>= 1.9
    cpp-options: -DDEP_TIME

  if flag(dep-transformers)
    build-depends: transformers ^>= 0.5
    cpp-options: -DDEP_TRANSFORMERS

  if flag(dep-transformers-base)
    build-depends: transformers-base ^>= 0.4
    cpp-options: -DDEP_TRANSFORMERS_BASE

  if flag(dep-typed-process)
    build-depends: typed-process ^>= 0.2
    cpp-options: -DDEP_TYPED_PROCESS

  if flag(dep-unagi-chan)
    build-depends: unagi-chan ^>= 0.4
    cpp-options: -DDEP_UNAGI_CHAN

  if flag(dep-unix)
    build-depends: unix ^>= 2.7
    cpp-options: -DDEP_UNIX

  if flag(dep-unliftio)
    build-depends: unliftio ^>= 0.2.7.0
    cpp-options: -DDEP_UNLIFTIO

  if flag(dep-unordered-containers)
    build-depends: unordered-containers ^>= 0.2
    cpp-options: -DDEP_UNORDERED_CONTAINERS

  if flag(dep-vector)
    build-depends: vector ^>= 0.12
    cpp-options: -DDEP_VECTOR

  if flag(dep-weigh)
    build-depends: weigh ^>= 0.0
    cpp-options: -DDEP_WEIGH

  if flag(dep-writer-cps-mtl)
    build-depends: writer-cps-mtl ^>= 0.1
    cpp-options: -DDEP_WRITER_CPS_MTL

  ------------------------------------------------------------------------------
  -- Exposed modules
  ------------------------------------------------------------------------------

  exposed-modules:
    Ala.Const
    Ala.Identity
    Ala.Product
    Ala.Sum
    Alternative
    Applicative
    Bifoldable
    Bifoldable.Partial
    Bifunctor
    Bitraversable
    Bits
    Bool
    Bounded
    Category
    Char
    Char.Partial
    Clock
    Coerce
    Coerce.Unsafe
    Compose
    Concurrency
    Data
    Debug
    Dynamic
    Either
    Enum
    Environment
    Equality
    Error
    Eval
    Exception
    Field
    File
    File.Text
    Foldable
    Foldable.Partial
    Function
    Functor
    Generic
    IO
    IO.Unsafe
    IORef
    Ix
    Label
    List
    List.Partial
    List1
    List1.Partial
    MVar
    Maybe
    Maybe.Partial
    Mitchell
    Monad
    Monad.Fail
    Monad.Fix
    Monad.Plus
    Monad.Zip
    Monoid
    Numeric.Complex
    Numeric.Double
    Numeric.Floating
    Numeric.Fractional
    Numeric.Int
    Numeric.Int8
    Numeric.Int16
    Numeric.Int32
    Numeric.Int64
    Numeric.Integer
    Numeric.Integral
    Numeric.Float
    Numeric.Nat
    Numeric.Natural
    Numeric.Num
    Numeric.Product
    Numeric.Ratio
    Numeric.Real
    Numeric.RealFloat
    Numeric.RealFrac
    Numeric.Sum
    Numeric.Word
    Numeric.Word8
    Numeric.Word16
    Numeric.Word32
    Numeric.Word64
    Ord
    Parallelism
    Posix
    Printf
    Proxy
    Ptr
    Ptr.Foreign
    Ptr.Fun
    Ptr.Stable
    Ptr.Static
    Ptr.Weak
    QSem
    RTS
    Read
    Read.Partial
    ST
    Semigroup
    Show
    StableName
    Storable
    Symbol
    System
    Traversable
    Tuple
    Type
    Typeable
    Unique
    Version
    Void

  if flag(dep-aeson)
    exposed-modules:
      Json.Decode
      Json.Encode

  if flag(dep-ansi-terminal)
    exposed-modules:
      Terminal

  if flag(dep-atomic-primops)
    exposed-modules:
      Counter

  if flag(dep-base16-bytestring)
    exposed-modules:
      ByteString.Base16
      ByteString.Lazy.Base16

  if flag(dep-bytestring)
    exposed-modules:
      ByteString
      ByteString.Partial
      ByteString.Short
      ByteString.Lazy
      ByteString.Lazy.Latin1
      ByteString.Latin1

  if flag(dep-bytestring) || flag(dep-unliftio)
    exposed-modules:
      File.Binary

  if flag(dep-bytestring-trie)
    exposed-modules:
      Trie

  if flag(dep-comonad)
    exposed-modules:
      Comonad

  if flag(dep-compact)
    exposed-modules:
      Compact

  if flag(dep-constraints)
    exposed-modules:
      Constraint

  if flag(dep-contravariant)
    exposed-modules:
      Contravariant
      Predicate

  if flag(dep-contravariant) || flag(dep-contravariant-extras)
    exposed-modules:
      Decidable
      Divisible

  if flag(dep-containers)
    exposed-modules:
      Graph
      Map
      Map.Int
      Map.Int.Lazy
      Map.Lazy
      Sequence
      Set
      Set.Int
      Tree

  if flag(dep-distributive)
    exposed-modules:
      Distributive

  if flag(dep-dlist)
    exposed-modules:
      DList
      DList.Partial

  if flag(dep-erf)
    exposed-modules:
      Numeric.Erf
      Numeric.InvErf

  if flag(dep-foldl)
    exposed-modules:
      Foldl

  if flag(dep-gauge)
    exposed-modules:
      Benchmark

  if flag(dep-hashable)
    exposed-modules:
      Hashable

  if flag(dep-heaps)
    exposed-modules:
      Heap

  if flag(dep-hedgehog)
    exposed-modules:
      Test
      Test.Gen
      Test.Range

  if flag(dep-lens)
    exposed-modules:
      Optic.Iso
      Optic.Lens
      Optic.Prism
      Optic.Traversal

  if flag(dep-list-transformer)
    exposed-modules:
      ListT

  if flag(dep-logict)
    exposed-modules:
      Logic

  if flag(dep-optparse-applicative)
    exposed-modules:
      Optparse

  if flag(dep-prettyprinter)
    exposed-modules:
      Pretty

  if flag(dep-primitive)
    exposed-modules:
      Prim

  if flag(dep-psqueues)
    exposed-modules:
      PSQ.Hash
      PSQ.Int
      PSQ.Ord

  if flag(dep-managed)
    exposed-modules:
      Managed

  if flag(dep-megaparsec)
    exposed-modules:
      Parser.Text
      Parser.Binary

  if flag(dep-mmorph)
    exposed-modules:
      MFunctor
      MMonad

  if flag(dep-mtl) || flag(dep-transformers)
    exposed-modules:
      Cont
      Except
      Reader
      State

  if flag(dep-multiset)
    exposed-modules:
      MultiSet
      MultiSet.Int

  if flag(dep-mwc-random)
    exposed-modules:
      Random

  if flag(dep-network)
    exposed-modules:
      Socket

  if flag(dep-profunctors)
    exposed-modules:
      Profunctor

  if flag(dep-reactive-banana)
    exposed-modules:
      FRP

  if flag(dep-reflection)
    exposed-modules:
      Reflection

  if flag(dep-regex-applicative)
    exposed-modules:
      Regex

  if flag(dep-scientific)
    exposed-modules:
      Numeric.Scientific

  if flag(dep-stm)
    exposed-modules:
      STM.TSem

  if flag(dep-stm) || flag(dep-unliftio)
    exposed-modules:
      STM.TBQueue
      STM.TChan
      STM.TMVar
      STM.TVar

  if flag(dep-stm-containers)
    exposed-modules:
      STM.TBimap
      STM.TMap
      STM.TMultimap
      STM.TSet

  if flag(dep-tagged)
    exposed-modules:
      Tagged

  if flag(dep-text)
    exposed-modules:
      Text
      Text.Lazy
      Text.Partial

  if flag(dep-text-short)
    exposed-modules:
      Text.Short
      Text.Short.Partial
      Text.Short.Unsafe

  if flag(dep-time)
    exposed-modules:
      Time

  if flag(dep-transformers)
    exposed-modules:
      MaybeT
      Monad.Trans

  if flag(dep-transformers-base)
    exposed-modules:
      Monad.Base

  if flag(dep-typed-process) || flag(dep-unix)
    exposed-modules:
      Process

  if flag(dep-unagi-chan)
    exposed-modules:
      Chan

  if flag(dep-unordered-containers)
    exposed-modules:
      Map.Hash
      Set.Hash

  if flag(dep-vector)
    exposed-modules:
      Vector
      Vector.Generic
      Vector.Mutable
      Vector.Primitive
      Vector.Storable
      Vector.Unboxed

  if flag(dep-weigh)
    exposed-modules:
      Weigh

  if flag(dep-writer-cps-mtl)
    exposed-modules:
      Writer

--------------------------------------------------------------------------------
-- Benchmarks
--------------------------------------------------------------------------------

benchmark semaphore
  hs-source-dirs: bench
  main-is: Semaphore.hs
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  ghc-options: -O -rtsopts -threaded "-with-rtsopts=-N4 -qg"
  build-depends: mitchell-stdlib
  default-language: Haskell2010
